Implement get("/event/<event_id>/qe/chng/in?<offset>")
